Fixed spacing of card elements

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ ul a:hover {
     margin: 0;
 }
 header {
-    height: 65vh;
+    height: 45vh;
     padding-top: 4rem;
 }
 
@@ -79,19 +79,34 @@ header {
 .card {
     background-color: pink;
     height: 400px;
-    padding: 0rem 1rem;
     color: var(--white);
-    border-radius: 25px;
+    border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
 }
+.cardtitle{
+    padding: 1rem 1rem;
+}
 .cardlinks {
     margin-top: auto;
     display: flex;
     justify-content: space-evenly;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
+    padding-top: 1rem;
+    background-color: grey;
+}
+.cardlinks a {
+    color: var(--white);
+    text-decoration: none;
+    font-weight: 400;
+    border-bottom: 4px solid transparent;
+    padding-bottom: 5px;
+}
+.cardlinks a:hover {
+    border-bottom: 4px solid var(--white);
+    padding-bottom: 5px;
 }
 
 /* Footer Styling*/
@@ -99,6 +114,8 @@ header {
         font-size: 12px;
     }
 
+
+    
 /* Responsive Styling at 768px and up */
 @media only screen and (min-width: 768px) {
     .container{
@@ -122,13 +139,13 @@ header {
     /* Header Styling */
     header {
         margin-top: 4rem;
-        height: 55vh;
+        height: 50vh;
     }
     /* Card Styling */
     .projects {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        column-gap: 2em;
+        column-gap: 4em;
         }
 }
 
